--- a/d01-hello/Cargo.toml
+++ b/d01-hello/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "0.3", features = ["full"] }
-warp = ""
+tokio = { version = "0.2", features = ["full"] }
+warp = "0.2.5"
 
