--- a/d02-routing/Cargo.toml
+++ b/d02-routing/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "d02-routing"
+name = "d01-hello"
 version = "0.1.0"
 authors = ["xue35@Mac <xue35@icloud.com>"]
 edition = "2018"
@@ -7,3 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokio = { version = "0.2", features = ["full"] }
+warp = "0.2.5"
+pretty_env_logger = "0.4"
+
+
+[build]
+rustdocflags = ["--no-deps"]
