--- a/a04-header/Cargo.toml
+++ b/a04-header/Cargo.toml
@@ -11,3 +11,4 @@ warp = "0.2.5"
 tokio = { version = "0.2", features = ["full"] }
 pretty_env_logger = "0.4.0"
 serde = { version = "1.0", features = ["derive"] }
+log = "0.4"
