--- a/a06_tls/Cargo.toml
+++ b/a06_tls/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2018"
 
 [dependencies]
 tokio = { version = "1.0", features = ["full"] }
+tokio-rustls = { version = "0.22", optional = true }
 warp = { version ="0.3", features = ["tls"] }
 
